Removes phone frame on mobile devices Fixes #5

--- a/styles/main.css
+++ b/styles/main.css
@@ -1,12 +1,10 @@
+*, *:before, *:after {
+  box-sizing: inherit;
+}
+
 html {
   box-sizing: border-box;
   height: 100%;
-}
-
-*,
-*:before,
-*:after {
-  box-sizing: inherit;
 }
 
 body {
@@ -15,34 +13,31 @@ body {
   background-position: center center;
   background-repeat: no-repeat;
   background-size: cover;
-  height: 839px;
   padding: 20px 0;
 }
 
 .page {
   width: 100%;
   height: 100%;
-}
-
-.phone {
-  width: 100%;
-  height: 100%;
-  background-position: center center;
-  background-repeat: no-repeat;
-  background-size: auto 800px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 
 .chat-root {
   height: 100%;
 }
 
+.marvel-device .screen {
+  text-align: left;
+}
+
+.wrapperchat {
+  height: calc(100% - 69px);
+}
+
 .wa-container {
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  -webkit-transform: translate(-50%, -50%);
-          transform: translate(-50%, -50%);
-  position: relative;
+  height: 100%;
 }
 
 .wa-container .status-bar {
@@ -105,13 +100,13 @@ body {
           transform: rotate(-45deg);
 }
 
-.wa-container .user-bar .user {
+.wa-container .user-bar .avatar {
   margin: 0 0 0 8px;
   width: 36px;
   height: 36px;
 }
 
-.wa-container .user-bar .user img {
+.wa-container .user-bar .avatar img {
   border-radius: 50%;
   display: block;
   box-shadow: 0 1px 0 rgba(255, 255, 255, 0.1);
@@ -121,7 +116,7 @@ body {
 .wa-container .user-bar .name {
   font-size: 16px;
   margin: 0 0 0 8px;
-  width: 165px;
+  width: 130px;
   white-space: nowrap;
   overflow: hidden;
   text-overflow: ellipsis;
@@ -157,11 +152,26 @@ body {
 }
 
 .wa-container .chat-window {
-  height: calc(100% - 152px);
+  height: calc(100% - 12px);
   position: relative;
   background: url("../images/wall.jpg");
   background-size: 100%;
   box-shadow: inset 0 10px 10px -10px #000000;
+}
+
+.wa-container .chat-window ::-webkit-scrollbar {
+  transition: all .5s;
+  width: 5px;
+  height: 1px;
+  z-index: 10;
+}
+
+.wa-container .chat-window ::-webkit-scrollbar-track {
+  background: transparent;
+}
+
+.wa-container .chat-window ::-webkit-scrollbar-thumb {
+  background: #b9b9b9;
 }
 
 .wa-container .chat-window:after {
@@ -171,7 +181,6 @@ body {
 }
 
 .wa-container .chat-window .conversation {
-  width: 100%;
   overflow: auto;
   height: calc(100% - 68px);
   padding: 0 16px;
@@ -268,6 +277,7 @@ body {
   bottom: 8px;
   height: 50px;
   padding: 0 0 0 8px;
+  overflow: hidden;
 }
 
 .wa-container .chat-window .textarea:after {
@@ -297,7 +307,7 @@ body {
 }
 
 .wa-container .chat-window .textarea input {
-  width: 63%;
+  width: 59%;
   border: 0;
   outline: none;
   font-size: 16px;
@@ -377,27 +387,4 @@ body {
   -webkit-transform: translate(-50%, -50%);
           transform: translate(-50%, -50%);
   font-size: 24px;
-}
-
-.wrapperchat {
-  height: calc(100% - 81px);
-}
-
-.page.nexus6 .phone {
-  background-image: url("../images/nexus6.png");
-  background-size: auto 799px;
-}
-
-.page.nexus6 .wa-container {
-  width: 382px;
-  height: 681px;
-  padding: 6px 0 0;
-}
-
-.page.nexus6 .wa-container .chat-window {
-  height: calc(100% - 55px);
-}
-
-.page.nexus6 .wrapperchat {
-  height: calc(100% - 69px);
 }
